--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,14 +14,15 @@ permissions:
   packages: write
   contents: read
   id-token: write
-  
+
 on:
   push:
-    branches: 
+    branches:
       - main
+      - chore-improve-logging-translation
   release:
     types: [published]
-  
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -56,7 +57,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          platforms: linux/amd64,linux/arm64/v8
+          platforms: linux/amd64
           target: production
           push: true
           tags: ${{ steps.meta.outputs.tags }}
